up arrows added

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -185,10 +185,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -226,10 +226,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -246,10 +246,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -284,10 +284,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -322,10 +322,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -342,10 +342,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -381,10 +381,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -420,10 +420,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -440,10 +440,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -479,10 +479,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -515,10 +515,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -535,10 +535,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -572,10 +572,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -609,10 +609,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -633,10 +633,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">return to strategies</a>
+          <a href="#tools">&uarr;return to strategies</a>
         </div>
         <div>
-          <a href="#top">return to top</a>
+          <a href="#top">&uarr;return to top</a>
         </div>
   </div>
   <!--end return block-->
