--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css?ver=2">
+        <link rel="stylesheet" href="css/main.css?ver=2.1">
     </head>
     <body id="top">
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
@@ -145,10 +145,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -185,10 +185,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -226,10 +226,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -246,10 +246,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -284,10 +284,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -313,6 +313,7 @@
         <h4>Resources</h4>
         <ul>
           <li><a href="https://collaborate.vcu.edu/apps/drive/">Google Drive at VCU</a></li>
+          <li><a href="https://www.google.com/url?q=https://collaborate.vcu.edu/how-do-i/share-between-vcu-faculty-staff-and-students/&sa=D&ust=1584125141540000&usg=AFQjCNGvnmp4KIBqCokZbqoZviEkzU1YcQ">Sharing between faculty and students</a></li>
           <li><a href="https://www.linkedin.com/learning/google-drive-essential-training-3/do-more-than-store-files-with-google-drive?u=76209018">Google Drive Essential Training</a></li>
           <li><a href="https://support.google.com/a/users/answer/9310246?hl=en">General Google Drive Information</a></li>
         </ul>
@@ -322,10 +323,10 @@
       <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -335,17 +336,17 @@
       <h2>Lecture and Video Capture</h2>
     </div>
     <div class="col-md-8">
-      <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. It is important to provide captions for any video content. Some tools have options for auto-generating captions for you, although they are only ~80% accurate. </p>
+      <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. It is important to provide captions for any video content. Some tools have options for auto-generating captions for you which are ~80% accurate. </p>
     </div>
   </div>
   <!--end lecture row-->
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -381,10 +382,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -420,10 +421,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -440,10 +441,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -479,10 +480,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -515,10 +516,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -535,10 +536,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -572,10 +573,10 @@
     <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -609,10 +610,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
@@ -633,10 +634,10 @@
   <!--return block-->
   <div class="return-block">
         <div>
-          <a href="#tools">&uarr;return to strategies</a>
+          <a href="#tools"><span class="up">&uarr;</span>return to strategies</a>
         </div>
         <div>
-          <a href="#top">&uarr;return to top</a>
+          <a href="#top"><span class="up">&uarr;</span>return to top</a>
         </div>
   </div>
   <!--end return block-->
