cc license addition

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/main.css?ver=2.1">
     </head>
     <body id="top">
-      <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
+      <!--this is an evolving document - it is only a few days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
           <div class="row" id="tips">           
             <div class="col-md-12">
@@ -501,7 +501,7 @@
     <div class="col-md-4 restrictions">
       <h4>Details</h4>
       <ul>
-        <li>Microsoft Office is available for free for current students, and for $14.99 for faculty, and staff via the <a href="http://vcu.onthehub.com/">VCU Microsoft Office 365 portal</a></li>
+        <li>Microsoft Office is available for free for current students, and for jQuery14.99 for faculty, and staff via the <a href="http://vcu.onthehub.com/">VCU Microsoft Office 365 portal</a></li>
       </ul>
     </div>
     <div class="col-md-3">
@@ -716,8 +716,11 @@
 
   </div>
   <!--end support row-->
-
+  <div id="footer">
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Rapid Transition Taskforce</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+  </div>
 </div>
+
 
        
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
