--- a/students/index.html
+++ b/students/index.html
@@ -211,8 +211,10 @@
                         <li><a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form (requesting incomplete grade)</a></li>
                     </ul>
                   </div>
-
-            </div>
+                  <div id="footer">
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Rapid Transition Taskforce</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+                  </div>
+            </div>            
          </div>
 
        
