--- a/students/index.html
+++ b/students/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/main.css?ver=2.2">
     </head>
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
@@ -146,9 +146,23 @@
 
                   <h4>Laptop Purchase</h4>
                   <p>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM</a> Tech (VCU discounts and payroll deduction) or a reputable retailer.  Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote learning.</p>
-                  <p>Wifi / internet access:  students can add “hot spots” to their wireless cell phone plans or access VCU SafeNet while in your car in/around the VCU campuses.</p>
+        
                   <h5>VCU Military Services</h5>
                   <p>For our veterans who need a laptop computer a local veteran support organization, <a href="https://techfortroops.org/">Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
+                </div>
+                <div class="col-md-8">
+                  <h3>Internet Access Options</h3>
+
+                  <p>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </p>  
+                  <p>A number of companies are offering both reduced cost and increased bandwidth options.</p>   <ul>  
+                    <li><a href="https://docs.fcc.gov/public/attachments/DOC-363033A1.pdf">FCC agreement</a> stating that providers will waive late fees, not cutoff service for lack of payment, and open hot-spots</li>            
+                    <li><a rhre="https://corporate.comcast.com/press/releases/internet-essentials-low-income-broadband-coronavirus-pandemic">Comcast</a> - offers free WiFi for 2 months to low income families plus all Xfinity hot-spots are free to the public during this time</li>
+                    <li><a href="https://www.internetessentials.com/">Internet Essentials</a> - $9.95 a month with no contract</li>
+                    <li><a href="https://corporate.charter.com/newsroom/charter-to-offer-free-access-to-spectrum-broadband-and-wifi-for-60-days-for-new-K12-and-college-student-households-and-more?fbclid=IwAR2gnofDvDNanY-GtJfzXzKxqITVILRVRkeljA5ofwvDi1VSMa1_cGjrtqE" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fcorporate.charter.com%2Fnewsroom%2Fcharter-to-offer-free-access-to-spectrum-broadband-and-wifi-for-60-days-for-new-K12-and-college-student-households-and-more%3Ffbclid%3DIwAR2gnofDvDNanY-GtJfzXzKxqITVILRVRkeljA5ofwvDi1VSMa1_cGjrtqE&amp;h=AT15zyRAfG5E1joLEomYYHI72A8H4b_lFcZoqR-7izdEcU0UGOGh5M8kNhkXg33ePKDTapEAf7UupGLS5Djt_fF_t3Q5zlwprgmBL8wFZ3q8I-iYDBoAHzp3BqiR8kQ0IKWsNy8ogX1WrSVlvuNxAY8">Charter Free Internet offer for 2 months.</a><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fabout.att.com%2Fpages%2FCOVID-19.html%3Ffbclid%3DIwAR2yQmaIWseB2AP60bQ2VI9JwWHht88_UsjJneOu6kpk7J_XJr3mK8AmRWc&amp;h=AT2yw0pvq6ko6VuVPOaP_M1wOMuSlqOMh5g2hiF9flMc187XmSwpvlssyveVdSHb_ogcf-uYN999udhCqIDJDJV6ykWFM3_9T0FhdKcezN8K50gVwJ9X8KqfErsq1q3VgSBiUh3KSbm1VbQ8Sy7Edso" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy">AT&amp;T COVID-19 response</a>: offers open hot-spots, unlimited data to existing customers, and $10/month plans to low income families.</li>
+                    <li><a href="https://www.verizon.com/about/news/our-response-coronavirus?fbclid=IwAR2wCK5wkGFykCF9vAfMi9gWMLWuxOUxuJcuzXKTySVY9zfw8TYijPrm8Gc" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.verizon.com%2Fabout%2Fnews%2Four-response-coronavirus%3Ffbclid%3DIwAR2wCK5wkGFykCF9vAfMi9gWMLWuxOUxuJcuzXKTySVY9zfw8TYijPrm8Gc&amp;h=AT3mqxRKDuj7aopIiRzcJY7WIxn-IOOzFerM-H7cn_rPmKzIN0rpeNKF3xyXJE85nU7d3AISLKESW-sjeW_5hrd2niZyM8lxsD-QI_-Jz5u-NJ7S6M2naO6IE9cH592LervilPFuNJbdaSFDg5jkBBw">Verizon COVID-19 response</a>: no special offers, but following the FCC agreement.</li>
+                    <li><a href="https://newsroom.sprint.com/covid-19-updates-sprint-responds.htm?fbclid=IwAR1nAdSnbB3N08bNr_tBtUyjefpzhJf_ILvQELaIPezk6fQmP2ZIklXuQYc" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fnewsroom.sprint.com%2Fcovid-19-updates-sprint-responds.htm%3Ffbclid%3DIwAR1nAdSnbB3N08bNr_tBtUyjefpzhJf_ILvQELaIPezk6fQmP2ZIklXuQYc&amp;h=AT309wbqDA9oYxGZXmZy-KNa27ALXGJ944kqHUD2IL9-gN0FU5zBMOEd1FFZRyy7_NFhh6KBOY-QyIx6BDZgzkinRLZRMjT51BCUDgFaZNLFrW4zFWj8_kGQawrA7Tl11pgnnZMEvDkY9b1sm9H2o1c">Sprint COVID-19 response</a>: follows FCC agreement, provides unlimited data to existing customers, and, starting Tuesday, 3/17/2020, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
+                    <li><a href="https://www.t-mobile.com/news/t-mobile-update-on-covid-19-response?fbclid=IwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.t-mobile.com%2Fnews%2Ft-mobile-update-on-covid-19-response%3Ffbclid%3DIwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y&amp;h=AT3bA0A7Fmw4veqNbb8YHviFxCx19YZvvj19pc2tULDOSXWSr4maEmvcoucZh7HTl5T6eswTl0lGhYVVzmoQMVJmXFC5FXTZJHf0ztFpPrSxE2ffdRDF3qoUc1EMM81_eDPW-hMEJGiTqII-Yewo8Ks">T-Mobile COVID-19 response</a>: follows FCC agreement, plus unlimited data to existing customers, and, coming soon, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
+                  </ul>
                 </div>
                 <div class="col-md-8">
                   <h3>Technology Support</h3>
