accessibility statement changes as directed

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       <h2>Lecture and Video Capture</h2>
     </div>
     <div class="col-md-8">
-      <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. It is important to provide captions for any video content. Some tools have options for auto-generating captions for you which are ~80% accurate. </p>
+      <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. </p>
     </div>
   </div>
   <!--end lecture row-->
@@ -412,8 +412,8 @@
       <h4>Resources</h4>
       <ul>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/kaltura-capture/">Kaltura Capture at VCU</a></li>
-        <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/captioning-and-editing-in-kaltura/">Adding transcripts to Kaltura</a></li>
         <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
+        <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/kaltura/captioning-and-editing-in-kaltura/">Adding transcripts to Kaltura</a></li>      
       </ul>
     </div>
   </div>
@@ -507,7 +507,7 @@
     <div class="col-md-3">
       <h4>Resources</h4>
       <ul>
-        <li><a href="https://support.office.com/en-us/article/improve-accessibility-with-the-accessibility-checker-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">How to use the accessibility checker in Microsoft Office</a></li>
+       <!--  <li><a href="https://support.office.com/en-us/article/improve-accessibility-with-the-accessibility-checker-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">How to use the accessibility checker in Microsoft Office</a></li> -->
         <li><a href="https://support.office.com/en-us/article/save-powerpoint-presentations-as-pdf-files-9b5c786b-9c6e-4fe6-81f6-9372f77c47c8">How to make a PDF in PowerPoint</a></li>
       </ul>
     </div>
@@ -701,6 +701,18 @@
                     <li><a href="https://newsroom.sprint.com/covid-19-updates-sprint-responds.htm?fbclid=IwAR1nAdSnbB3N08bNr_tBtUyjefpzhJf_ILvQELaIPezk6fQmP2ZIklXuQYc" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fnewsroom.sprint.com%2Fcovid-19-updates-sprint-responds.htm%3Ffbclid%3DIwAR1nAdSnbB3N08bNr_tBtUyjefpzhJf_ILvQELaIPezk6fQmP2ZIklXuQYc&amp;h=AT309wbqDA9oYxGZXmZy-KNa27ALXGJ944kqHUD2IL9-gN0FU5zBMOEd1FFZRyy7_NFhh6KBOY-QyIx6BDZgzkinRLZRMjT51BCUDgFaZNLFrW4zFWj8_kGQawrA7Tl11pgnnZMEvDkY9b1sm9H2o1c">Sprint COVID-19 response</a>: follows FCC agreement, provides unlimited data to existing customers, and, starting Tuesday, 3/17/2020, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
                     <li><a href="https://www.t-mobile.com/news/t-mobile-update-on-covid-19-response?fbclid=IwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.t-mobile.com%2Fnews%2Ft-mobile-update-on-covid-19-response%3Ffbclid%3DIwAR1fqkvzkYkamnGoghKwqaYfNjFMQQ4g5EXaOLsgDX5fSYCeNBRtX5Ryk5Y&amp;h=AT3bA0A7Fmw4veqNbb8YHviFxCx19YZvvj19pc2tULDOSXWSr4maEmvcoucZh7HTl5T6eswTl0lGhYVVzmoQMVJmXFC5FXTZJHf0ztFpPrSxE2ffdRDF3qoUc1EMM81_eDPW-hMEJGiTqII-Yewo8Ks">T-Mobile COVID-19 response</a>: follows FCC agreement, plus unlimited data to existing customers, and, coming soon, will allow all handsets to enable hot-spots for 60 days at no extra charge (I expect others will follow).</li>
                   </ul>
+      </div>
+      <div class="col-md-8">
+        <h3 id="accomodations">Student Accommodations</h3>
+        <p>
+          We are all moving forward into uncharted territory. For students with approved accommodations, there may be some changes to how these are implemented. This will become a collaborative process between you, the student, and, if needed, the <a href="https://saeo.vcu.edu/">Office of Student Accessibility and Educational Opportunity</a> (for programs on the Monroe Park Campus) or the <a href="https://das.vcu.edu/">Division for Academic Success </a>(for programs in Health Science programs). For those students who have accommodations in place, start a conversation as soon as possible to discuss how they will translate to a remote/online format. SAEO (<a href="mailto:saeo@vcu.edu">saeo@vcu.edu</a>) and DAS (<a href="mailto:acadsuccess@vcu.edu">acadsuccess@vcu.edu</a>) are here to help with this process.
+        </p>
+      </div>
+       <div class="col-md-8">
+        <h3 id="accessibility">Accessibility</h3>
+        <p>
+          Online delivery of materials presents a whole new array of potential barriers. Please make every effort to select videos or content that are captioned or include transcripts. If you would like additional information about how to select or create accessible online materials, please contact <a href="mailto:saeo@vcu.edu">SAEO</a> or <a href="mailto:acadsuccess@vcu.edu">DAS</a>.
+        </p>
       </div>
       <div class="col-md-8">
         <h3 id="policy">Policies:</h3>
