--- a/students/index.html
+++ b/students/index.html
@@ -182,6 +182,10 @@
                   </ul>
                 </div>
                 <div class="col-md-8">
+                  <h3>Student Accommodations</h3>
+                  <p>Your professors are making every effort to address accommodations proactively. For students with approved accommodations, there may be some changes to how these are implemented. This will become a collaborative process between you , your professors, and the Office of <a href="https://saeo.vcu.edu/">Student Accessibility and Educational Opportunity</a> (Monroe Park Campus) and the <a href="https://das.vcu.edu/">Division for Academic Success</a> (Health Science programs). If you have any concerns about accessing or participating in your course in a remote/online format, share them with your instructor. This will allow them to proactively use that information in the re-design of their course.</p>
+                </div>
+                <div class="col-md-8">
                   <h3>Policies</h3>
                   <ul>
                         <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
