--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <div class="col-md-5">
       <div class="description">
         <h4>Description</h4>
-        <p>Zoom is a good option for live video and audio conferencing, collaboration, and chat across mobile devices, desktops, and telephones. Keep in mind that all videos need transcripts to be accessible.</p>        
+        <p>Zoom is a good option for live video and audio conferencing, collaboration, and chat across mobile devices, desktops, and telephones.</p>        
       </div>
     </div>
     <div class="col-md-4 restrictions">
@@ -398,7 +398,7 @@
     <div class="col-md-5">
       <div class="description">
         <h4>Description</h4>
-        <p>Kaltura Capture lets you record and publish videos and screencasts. These videos can then easily be shared with students for viewing as their schedule allows. Keep in mind that all videos need transcripts to be accessible.</p>        
+        <p>Kaltura Capture lets you record and publish videos and screencasts. These videos can then easily be shared with students for viewing as their schedule allows. </p>        
       </div>
     </div>
     <div class="col-md-4 restrictions">
@@ -472,7 +472,7 @@
       <h4>Resources</h4>
       <ul>
         <li><a href="https://www.linkedin.com/learning/team-collaboration-in-g-suite/understand-g-suite-and-google-apps?u=76209018">Understand G Suite and Google Apps</a></li>
-        <li><a href="https://support.google.com/docs/answer/6199477">Make your Google document or presentation more accessible</a></li>
+        <!-- <li><a href="https://support.google.com/docs/answer/6199477">Make your Google document or presentation more accessible</a></li> -->
       </ul>
     </div>
   </div>
